Fixed overlapping divs

--- a/style.css
+++ b/style.css
@@ -1144,8 +1144,8 @@ nav[role="navigation"] {
 }
 
 .site-content {
-  height: fit-content;
-  width: 100vw;
+/*  height: fit-content;
+*/  width: 100vw;
 }
 
 #content .site-content:nth-child(1n) {
@@ -1742,7 +1742,7 @@ input {
 
 
 #intro-section {
-  height: 80vh;
+  height: fit-content;
 }
 
 #mc-embedded-subscribe {
